<resources>
    <string name="app_name">Astro Adventures</string>
    <string name="score_text">Score : %1$d</string>
    <string name="ammo_reserve_text">Ammo Reserve : %1$d</string>
    <string name="start_game">Start Game</string>
    <string name="exit">Exit</string>
    <string name="view_scores">View Scores</string>
    <string name="please_turn_up_your_volume">Please turn up your volume</string>
    <string name="you_died">YOU DIED</string>
    <string name="game_over">Game Over</string>
    <string name="you_lost">YOU LOST</string>
    <string name="try_again">Try Again</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="enemyBreached">The Space pirates have breached your planet\'s atmosphere!</string>
    <string name="conserveAmmo">Supplies are running low. Try Conserving your Ammo \n \nPS : </string>
    <string name="level_start">Level %1$d Start</string>
    <string name="level_complete">Level %1$d Complete</string>
    <string name="level">Level %1$d - %2$d</string>
    <string name="text_continue">Continue</string>
    <string name="high_score">High Score</string>
    <string name="score">Score</string>
    <string name="ammo_bonus">Ammo Bonus</string>
    <string name="total">Total</string>
    <string name="rate">Rate</string>
    <string name="more">More</string>
    <string name="policy">Policy</string>
    <string name="share">Share</string>
    <string name="more_app_loitpp">People can criticise me all the time they want, by this is what I am and I will not change the way I live for them.
\nI live the way I want to flow.
\nIf we don’t transform the world, who will? If not now, when?
\nIf you have something to give, give it now
\nDo your little bit of good where you are.
\nIt’s those little bits of good put together that overwhelm the world.
\nDon’t just think, do it. Now it is you turn, do it now, download my apps and rate 5 stars. Thank you!
\nhttps://play.google.com/store/apps/dev?id=9198084038765766736</string>
</resources>
