<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        app:layout_constraintBottom_toTopOf="@+id/llMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.roy.ui.menu.logo.LogoTextView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:padding="24dp"
            android:text="@string/app_name"
            android:textColor="@color/secondaryFontColor"
            android:textSize="@dimen/menu_logo_text_size"
            android:textStyle="italic|bold"
            app:fontFamily="@font/font2" />

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.roy.ui.menu.buttons.MenuButtonView
            android:id="@+id/btnStart"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/start_game" />

        <com.roy.ui.menu.buttons.MenuButtonView
            android:id="@+id/btnViewScores"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/view_scores" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llRateMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.roy.ui.menu.buttons.MenuButtonView
                android:id="@+id/btnRate"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/rate" />

            <com.roy.ui.menu.buttons.MenuButtonView
                android:id="@+id/btnMore"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/more" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llSharePolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.roy.ui.menu.buttons.MenuButtonView
                android:id="@+id/btnShare"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/share" />

            <com.roy.ui.menu.buttons.MenuButtonView
                android:id="@+id/btnPolicy"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/policy" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.roy.ui.menu.buttons.MenuButtonView
            android:id="@+id/btnExit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/exit" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
