<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDiedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:letterSpacing="0.1"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="@color/secondaryFontColor"
        android:textSize="@dimen/text_44_size"
        app:fontFamily="@font/font2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDiedSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.1"
        android:lineSpacingMultiplier="1.1"
        android:textAlignment="center"
        android:textColor="@color/shipShadowColor"
        android:textSize="20sp"
        app:fontFamily="@font/font2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiedText"
        app:layout_constraintWidth_percent="0.75" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:letterSpacing="0.1"
        android:text="@string/score_text"
        android:textAlignment="center"
        android:textColor="@color/primaryFontColor"
        android:textSize="20sp"
        app:fontFamily="@font/font2"
        app:layout_constraintBottom_toTopOf="@+id/tvDiedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.roy.ui.menu.buttons.MenuButtonView
        android:id="@+id/btnTryAgain"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintBottom_toTopOf="@id/btnMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiedSubTitle"
        app:layout_constraintVertical_bias="0.76"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.6" />

    <com.roy.ui.menu.buttons.MenuButtonView
        android:id="@+id/btnMainMenu"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/back_to_main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTryAgain"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>
